# rust_todo_public

./: .gitignore  Cargo.toml  Makefile  Shuttle.toml
.github/workflows/: deploy.yml
bk/examples/: hello-redis.rs
front-rust/: Cargo.toml  Dioxus.toml
front-rust/src/: main.rs
migrations/: 20240729090913_init.sql  20240731044621_label.sql
src/: handlers.rs  handles.rs  main.rs  repositories.rs
src/handlers/: label.rs  todo.rs
src/repositories/: label.rs  todo.rs
todo-front/: package-lock.json  package.json  tsconfig.node.tsbuildinfo
todo-front/src/: App.tsx  main.tsx  style.module.css
todo-front/src/components/: SideNav.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-front/src/lib/api/: label.ts  todo.ts
todo-front/src/styles/: modal.ts
todo-front/src/types/: todo.d.ts
todo-front_local/: package.json
todo-front_local/src/components/: TodoForm.tsx  TodoItem.tsx
todo-front_local/src/lib/api/: label.ts  todo.ts
