[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
hyper = { version = "1.4.1", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-secrets = "0.38.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["database-test"]
database-test = []
