[package]
name = "front-rust"
version = "0.1.0"
authors = ["gravity <gravity.chiffon+tech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
dioxus = { version = "0.5", features = ["fullstack", "router"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Debug
dioxus-logger = "0.5.1"
reqwest = { version = "0.12.7", features = ["json"] }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
